--- a/index.html
+++ b/index.html
@@ -21,4 +21,15 @@
 <section class="mercedez">
        <div class="mercedes-div-conteudo"> 
         <h2 clas="mercedes-titulo">historia da marca</h2>
-        <p clas="mercedez-texto-um">a <mercedes-benz
+        <p clas="mercedez-texto-um">A mercedes-benz é uma marca alemã de automoveis pertencente e mercedes-
+        
+        </div>
+        <img class="carro-imagem"src="capa_155.jpg" alt="carro mercedes">
+        </section>
+        <section class="parte_inferior">
+            <h2 class="parte-inferior-titulo">principais produtos da marca</h2>
+            <div class="bloco-arrumar-fotos">
+                <span></span>
+                <div class="carros-div">
+
+
